# fluentqa-structs

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  unit.csv  unit_demo.csv  unit_demo.xlsx
.github/workflows/: build.yml  python-app.yml
docs/: pydantic.md
src/fluentmodels/: __init__.py  datatools.py  dicttools.py  exceltools.py  jsontools.py  models.py  yamltools.py
src/fluentstructs/: __init__.py  dicttools.py  exceltools.py  models.py  operations.py  yamltools.py
src/qpystructs/: __init__.py  dicttools.py  exceltools.py  jsontools.py  operations.py  yamltools.py
tests/: data_constants.py  example.yaml  test_datatools.py  test_dicttools.py  test_excel.py  test_jsontools.py  test_operations.py  test_pydantic_yaml.py  test_yamltools.py  unit_demo.xlsx
